src/about/About.css
.main-about {
  padding: 2rem 0;
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 100%;
  max-width: 600px;
  margin: 0 2rem;

  .mainText-about {
    margin: 1rem 0;
    display: flex;
    flex-direction: column;
    gap: 1.5rem;

    .social-medias {
      display: flex;
      flex-direction: column;
      gap: 1rem;
      justify-content: center;
      align-items: center;

      .social-media-links {
        display: flex;
        justify-content: center;
        flex-wrap: wrap;
        gap: 2rem;
      }
    }

    .myname {
      color: var(--green);
      font-weight: 500;
      letter-spacing: .05rem;
    }

    .cs {
      color: var(--orange0);
      font-weight: 500;
      letter-spacing: .05rem;
    }
  }

  .rust {
    color: var(--orange);
    font-weight: 500;
  }

  .languages {
    display: flex;
    gap: 2rem;
    font-weight: 500;
    letter-spacing: .05rem;
    flex-wrap: wrap;
    justify-content: center;
    margin: .5rem 0;
    transition: all;

    p {
      transition: all 250ms ease;
    }

    p:hover {
      transform: scale(1.2);
    }

    .Typescript {
      color: var(--blue);
    }

    .Java {
      color: var(--red0);
    }

    .Python {
      color: var(--blue0);
    }

    .Javascript {
      color: var(--yellow);
    }

    .Haskell {
      color: var(--purple);
    }

    .SML {
      color: var(--red);
    }

    .C {
      color: var(--blue0);
    }

    .Go {
      color: var(--blue);
    }

    .Zig {
      color: var(--yellow0);
    }
  }

  .logical-problems {
    label {
      font-weight: 500;
    }
  }

  .leetcode {
    color: var(--yellow);
  }

  .hackerrank {
    color: var(--green0);
  }

  .codesignal {
    color: var(--blue0);
  }

  .codeforces {
    color: var(--red);
  }

  .leetcode-profile{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: .5rem;

    img {
      width: 100%;
    }

    small {
      color: var(--fg3);
      font-size: .6rem;
    }
  }

  .gardering-text {
    label {
      font-weight: 500;
    }
  }

  .gardering-label {
    color: var(--green);
  }

  .cucumber {
    color: var(--green0);
  }

  .waterm{
    color: var(--orange);
  }

  .tomato {
    color: var(--red);
  }

  .corn {
    color: var(--yellow);
  }

  .carrot {
    color: var(--orange0);
  }

  .gardering {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: .5rem;

    img {
      width: 30%;
    }

    small {
      color: var(--fg3);
      font-size: .6rem;
    }
  }
}

